[package]
name = "peerland"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.network]
path = "./network"

[dependencies.node]
path = "./node"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
