[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["net", "sync", "io-util", "macros", "rt-multi-thread"] }
turmoil = { version = "0.6.5", optional = true }
tokio-util = "0.7.13"

[dependencies.sync]
path = "../sync"

[features]
simulation = ["turmoil"]
