[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["sync", "rt-multi-thread", "time", "io-util"] }
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
prost = "0.13.4"
prost-build = "0.13.4"

[dependencies.network]
path = "../network"

[features]
simulation = ["network/simulation"]

[build-dependencies]
prost-build = "0.13.4"
