[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.9"
tokio = { version = "1.41.0", features = ["sync", "rt-multi-thread", "time", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
prost = "0.13.4"
prost-build = "0.13.4"
rand = "0.8.5"
prost-types = "0.13.4"

[dependencies.network]
path = "../network"

[dependencies.sync]
path = "../sync"

[features]
simulation = ["network/simulation"]

[build-dependencies]
prost-build = "0.13.4"
